fix: 레스토랑 이름 확인 메시지의 오타 수정

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -34,7 +34,7 @@ require.phone-number.not.blank=Phone numbers does not allow blank.
 require.pos.device=This service is only available for POS devices.
 require.positive.certification.attempt=The number of certification attempts cannot be negative.
 require.restaurant.name.length.less=Please enter the restaurant name in {0} characters or less.
-require.restaurant.name.not.blank=Restaurant's name does not allow blank.
+require.restaurant.name.not.blank=Restaurant name does not allow blank.
 require.restaurant.office-number.format=Invalid restaurant office number format.
 require.restaurant.office-number.not.blank=Restaurant office numbers do not allow blank.
 require.role.admin=This service requires the admin permission.
