--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -1,20 +1,20 @@
 account.canceled=This account has been canceled.
-account.dormant=Your account is dormant.
-account.locked=Your account is locked.
 already.activated.user=Your account is already activated.
 already.use.email=This email is already in use.
 already.use.phone-number=This phone number is already in use.
 check.email.password=Please check your email and password.
 check.exceed.certification.attempt=The number of daily certification has been exceeded. Please try again in 24 hours.
+check.resource.path=The resource you requested could not be found. Please check the path.
 fail.generate.signature=Signature generate failed.
 internal.server.error=A problem occurred inside the server. Please try again later.
 invalid.email.format=Invalid email format.
 not.found.certification.attempt=Certification attempt not found.
 not.found.certification.code=Certification code not found.
 not.found.device=Device not found.
+not.found.exception.message=Error message source not found.
 not.found.user=User not found.
 password.not.match=Password does not match.
-request.method.not.support=The path "{0}" does not support method "{1}".
+request.method.not.support=The path ''{0}'' does not support method ''{1}''.
 require.authentication=This service requires authentication.
 require.business-number.format=Invalid business number format.
 require.business-number.not.blank=Business number does not allow blank.
