--- a/src/docs/asciidoc/user.adoc
+++ b/src/docs/asciidoc/user.adoc
@@ -2,10 +2,25 @@
 
 === 가입
 
+[NOTE]
+====
+가입이 완료되면 인증 확인 이메일이 자동으로 발송됩니다. +
+발송된 이메일을 통해 상태 활성화를 진행해야하며, 메일에 첨부된 URL은 아래와 같습니다. +
+/users/activate?email={이메일주소}&token={토큰} +
+토큰의 유효기간은 10분이며, 해당 토큰을 이용해 상태 활성화를 진행할 수 있습니다. +
+또한 활성화에 실패한 경우 이메일 주소를 통해 인증 확인 이메일을 재발송할 수 있습니다.
+====
+
 operation::user-sign-up[snippets='http-request,request-fields,http-response,response-headers']
 
 === 로그인
 
-로그인 시 발급되는 액세스 토큰의 유효기간은 3시간입니다.
+NOTE: 로그인 시 발급되는 액세스 토큰의 유효기간은 3시간입니다.
 
 operation::user-sign-in[snippets='http-request,request-fields,http-response,response-fields']
+
+=== 상태 활성화
+
+NOTE: 발송된 이메일 인증 메일에 첨부되어 있는 토큰을 이용하여 사용자의 상태를 활성화합니다.
+
+operation::user-activate[snippets='http-request,http-response']
