feat: 인증번호 생성 기능 구현 (#24)

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -3,13 +3,14 @@ already.activated.user=사용자의 계정이 이미 활성화 상태입니다.
 already.use.email=이미 사용중인 이메일입니다.
 already.use.phone-number=이미 사용중인 휴대폰 번호입니다.
 check.email.password=이메일 및 비밀번호를 확인해주세요.
-check.exceed.certification.attempt=일일 인증 가능 횟수를 초과했습니다. 24시간 후 다시 시도해주세요.
+check.exceed.authentication.attempt=일일 인증 가능 횟수를 초과했습니다. 24시간 후 다시 시도해주세요.
 check.resource.path=요청하신 리소스를 찾을 수 없습니다. 경로를 확인해주세요.
 fail.generate.signature=시그니처 생성에 실패하였습니다.
 internal.server.error=서버 내부에 문제가 발생했습니다. 잠시 후 다시 시도해주세요.
+invalid.authentication.attempt.type=인증 시도 횟수 타입 변환에 실패했습니다. 타입을 확인해주세요.
+invalid.authentication.code.type=인증번호 타입 변환에 실패했습니다. 타입을 확인해주세요.
 invalid.email.format=유효하지 않은 이메일 형식입니다.
-not.found.certification.attempt=인증 시도를 찾을 수 없습니다.
-not.found.certification.code=인증 코드를 찾을 수 없습니다.
+not.found.authentication.code=인증 코드를 찾을 수 없습니다.
 not.found.device=디바이스를 찾을 수 없습니다.
 not.found.exception.message=에러 메시지 소스를 찾지 못했습니다.
 not.found.user=사용자를 찾을 수 없습니다.
@@ -24,7 +25,7 @@ require.email.certification=이메일 인증을 완료해주세요.
 require.email.not.blank=이메일은 공백을 허용하지 않습니다.
 require.exist.phone-number=사용자의 휴대폰 번호가 존재하지 않습니다.
 require.exist.restaurant=사용자의 식당이 존재하지 않습니다.
-require.match.certification.code=인증 번호가 일치하지 않습니다.
+require.match.authentication.code=인증 번호가 일치하지 않습니다.
 require.name.length.less=이름은 {0}자 이하로 입력해주세요.
 require.name.not.blank=이름은 공백을 허용하지 않습니다.
 require.password.format=비밀번호는 영문, 숫자, 특수문자를 조합하여 8자리 이상이어야 합니다.
@@ -32,7 +33,7 @@ require.password.not.blank=비밀번호는 공백을 허용하지 않습니다.
 require.phone-number.format=유효하지 않은 휴대폰 번호 형식입니다.
 require.phone-number.not.blank=휴대폰 번호는 공백을 허용하지 않습니다.
 require.pos.device=POS 기기만 이용 가능한 서비스입니다.
-require.positive.certification.attempt=인증 시도 횟수는 음수일 수 없습니다.
+require.positive.authentication.attempt=인증 시도 횟수는 음수일 수 없습니다.
 require.restaurant.name.length.less=식당의 이름은 {0}자 이하로 입력해주세요.
 require.restaurant.name.not.blank=식당의 이름은 공백을 허용하지 않습니다.
 require.restaurant.office-number.format=유효하지 않은 식당 전화 번호 형식입니다.
