--- a/src/docs/asciidoc/authentication.adoc
+++ b/src/docs/asciidoc/authentication.adoc
@@ -3,3 +3,7 @@
 === 인증 번호 생성
 
 operation::authentication-code-generate[snippets='http-request,request-fields,http-response']
+
+=== 인증 번호 검증
+
+operation::authentication-code-verify[snippets='http-request,request-fields,http-response']
