fix: 인증 필요 메시지 수정

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -21,7 +21,7 @@ require.business-number.format=유효하지 않은 사업자 번호 형식입니
 require.business-number.not.blank=사업자 번호는 공백을 허용하지 않습니다.
 require.detail.address.not.blank=상세 주소는 공백을 허용하지 않습니다.
 require.device.name.not.blank=디바이스 이름은 공백을 허용하지 않습니다.
-require.email.certification=이메일 인증을 완료해주세요.
+require.email.authentication=이메일 인증을 완료해주세요.
 require.email.not.blank=이메일은 공백을 허용하지 않습니다.
 require.exist.phone-number=사용자의 휴대폰 번호가 존재하지 않습니다.
 require.exist.restaurant=사용자의 식당이 존재하지 않습니다.
