--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -21,7 +21,7 @@ require.business-number.format=Invalid business number format.
 require.business-number.not.blank=Business number does not allow blank.
 require.detail.address.not.blank=Detail address does not allow blank.
 require.device.name.not.blank=Device names does not allow blank.
-require.email.certification=Please complete email certification.
+require.email.authentication=Please complete email authentication.
 require.email.not.blank=Email does not allow blank.
 require.exist.phone-number=Your phone number does not exist.
 require.exist.restaurant=Your restaurant does not exist.
